# modelvault2

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.rst  conf.py  getting_started.rst  index.rst  roadmap.rst
docs/internal/: API.md  ARCHITECTURE.md  COMPONENT_MODEL.md  CONTRACTS.md  CORE_CONCEPTS.md  CURSOR_PROMPT.md  DESIGN_PRINCIPLES.md  EXECUTION_PLANNER.md  IMPLEMENTATION_PLAN.md  MVP_SPEC.md  PACKAGE_STRUCTURE.md  REGISTRY.md  SPEC.md  SQLITE_BACKEND.md  STORAGE.md  TEST_PLAN.md  VISION.md
src/modelvault/: __init__.py  _version.py  collection.py  contracts.py  decorators.py  errors.py  fingerprint.py  planner.py  plans.py  registry.py  reports.py  serialization.py  typing.py  validation.py  vault.py
src/modelvault/backends/: base.py  sqlalchemy.py  sqlite.py
src/modelvault/metadata/: tables.py
src/modelvault/storage/: base.py  table.py
tests/: conftest.py  test_collection_crud.py  test_contracts.py  test_drift.py  test_fingerprints.py  test_health.py  test_model_decorator.py  test_planner.py  test_public_api.py  test_registry.py  test_sqlite_backend.py  test_table_storage.py  test_validation.py
