[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelvault"
version = "0.17.0"
description = "Model integrity layer between Pydantic and trusted databases"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "sqlalchemy>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]
docs = [
    "sphinx>=7",
    "sphinx-rtd-theme>=2",
    "myst-parser>=2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/modelvault"]

[tool.hatch.build.targets.editable]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src/modelvault" = "modelvault"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
